Configure app, change localizations, hide unnecessary blocks and pages

--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -39,9 +39,9 @@
       <photo-block app="{{app}}" cascaded></photo-block>
     {% endif %}
     <tickets-block app="{{app}}" cascaded></tickets-block>
-    <latest-posts app="{{app}}" posts="{{posts}}" cascaded></latest-posts>
-    <social-feed app="{{app}}" cascaded></social-feed>
+    <!-- <latest-posts app="{{app}}" posts="{{posts}}" cascaded></latest-posts> -->
     <map-block app="{{app}}" selected="{{selected}}" cascaded></map-block>
+    <social-feed app="{{app}}" cascaded></social-feed>
     <logos-block app="{{app}}" cascaded></logos-block>
     <footer-block app="{{app}}" cascaded></footer-block>
 
