--- a/src/hoverboard-app.html
+++ b/src/hoverboard-app.html
@@ -176,10 +176,10 @@
                      posts="{{posts}}"
                      videos="{{videos}}"></home-page>
 
-          <blog-page name="blog"
+          <!-- <blog-page name="blog"
                      app="{{app}}"
                      route="{{subRoute}}"
-                     posts="{{posts}}"></blog-page>
+                     posts="{{posts}}"></blog-page> -->
 
           <speakers-page name="speakers"
                          app="{{app}}"
@@ -192,11 +192,11 @@
                          schedule="{{schedule}}"
                          sessions="{{sessions}}"></schedule-page>
 
-          <team-page name="team"
+          <!-- <team-page name="team"
                      app="{{app}}"></team-page>
 
           <cod-page name="cod"
-                    app="{{app}}"></cod-page>
+                    app="{{app}}"></cod-page> -->
 
         </neon-animated-pages>
       </div>
