Edit logos, remove team page link

--- a/src/elements/footer-block.html
+++ b/src/elements/footer-block.html
@@ -167,7 +167,7 @@
       <div class="footer-content">
         <iron-image
           class="gdg-logo"
-          src="/images/gdg-logo.svg"
+          src="/images/gdg-logo.png"
           sizing="contain"
           alt="{$ organizer.name $}"
         ></iron-image>
