--- a/src/elements/toolbar-block.html
+++ b/src/elements/toolbar-block.html
@@ -139,7 +139,7 @@
         <a href="/" hidden$="{{hideLogo}}" fade>
           <iron-image
             class="logo"
-            src="/images/logo-white.svg"
+            src="/images/logo-light.svg"
             sizing="contain"
             alt="{$ title $}"
           ></iron-image>
