Add new tag colors

--- a/src/styles/shared-styles.html
+++ b/src/styles/shared-styles.html
@@ -63,6 +63,7 @@
         --ci: #cddc39;
         --tv: #d32f2f;
         --grpc: #607d8b;
+        --ui: #ffa000;
         --ux: #9c27b0;
         --material-design: #009688;
         --entrepreneurship: #673ab7;
@@ -75,6 +76,14 @@
         --docker: #2196f3;
         --chrome-extensions: #ff9800;
         --progressive-web-apps: #00b4aa;
+        --iot: #c7053d;
+        --scalability: #273a4b;
+        --data-science: #00796b;
+        --kotlin: #221f3a;
+        --java: #F50D1B;
+        --vr: #303f9f;
+        --ar: #424242;
+        --microservices: #fbc02d;
       }
 
       [layout] {
