Add new tag colors

--- a/src/styles/shared-styles.html
+++ b/src/styles/shared-styles.html
@@ -77,6 +77,7 @@
         --chrome-extensions: #ff9800;
         --progressive-web-apps: #00b4aa;
         --iot: #c7053d;
+        --ıot: #c7053d;
         --scalability: #273a4b;
         --data-science: #00796b;
         --kotlin: #221f3a;
@@ -84,6 +85,8 @@
         --vr: #303f9f;
         --ar: #424242;
         --microservices: #fbc02d;
+        --ai: #5D4037;
+        --nosql: #01579B;
       }
 
       [layout] {
