Add new tag colors again

--- a/src/styles/shared-styles.html
+++ b/src/styles/shared-styles.html
@@ -77,7 +77,6 @@
         --chrome-extensions: #ff9800;
         --progressive-web-apps: #00b4aa;
         --iot: #c7053d;
-        --ıot: #c7053d;
         --scalability: #273a4b;
         --data-science: #00796b;
         --kotlin: #221f3a;
@@ -87,6 +86,7 @@
         --microservices: #fbc02d;
         --ai: #5D4037;
         --nosql: #01579B;
+        --test: #283593;
       }
 
       [layout] {
