Fix some tag colors and localizations

--- a/src/styles/shared-styles.html
+++ b/src/styles/shared-styles.html
@@ -52,7 +52,7 @@
         --ux: #9c27b0;
         --material-design: #009688;
         --entrepreneurship: #673ab7;
-        --docker: #2196f3;
+        --docker: #0db7ed;
         --progressive-web-apps: #00b4aa;
         --iot: #c7053d;
         --scalability: #273a4b;
@@ -64,7 +64,7 @@
         --microservices: #fbc02d;
         --ai: #5D4037;
         --nosql: #01579B;
-        --test: #283593;
+        --test: #AFB42B;
       }
 
       [layout] {
