--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
     window.HOVERBOARD = window.HOVERBOARD || {};
-    window.ENV = 'dev';
+    window.ENV = 'prod';
     window.PREFIX = '/';
 
     // setup Polymer options
