Add some tag colors

--- a/src/styles/shared-styles.html
+++ b/src/styles/shared-styles.html
@@ -65,6 +65,9 @@
         --ai: #5D4037;
         --nosql: #01579B;
         --test: #AFB42B;
+        --innovation: #607D8B;
+        --computer-science: #9E9E9E;
+        --mobile: #00897B;
       }
 
       [layout] {
