Add git tag color

--- a/src/styles/shared-styles.html
+++ b/src/styles/shared-styles.html
@@ -64,6 +64,7 @@
         --innovation: #607D8B;
         --computer-science: #9E9E9E;
         --mobile: #00897B;
+        --git: #F05033;
       }
 
       [layout] {
