Remove register button

--- a/src/elements/tickets-block.html
+++ b/src/elements/tickets-block.html
@@ -83,9 +83,9 @@
         </template>
       </div>
       <div class="details">{$ ticketsDetails $}</div>
-      <a href="[[app.tickets.url]]" target="_blank" rel="noopener noreferrer" on-tap="_trackBuyClick">
+      <!-- <a href="[[app.tickets.url]]" target="_blank" rel="noopener noreferrer" on-tap="_trackBuyClick">
         <paper-button class="buy-button" raised>{$ buyTicket $}</paper-button>
-      </a>
+      </a> -->
     </div>
 
   </template>
