--- a/src/elements/toolbar-block.html
+++ b/src/elements/toolbar-block.html
@@ -185,11 +185,11 @@
           </div>
         </paper-menu-button>
 
-        <div class="action-button-wrapper" hidden$="[[app.isPhoneSize]]" layout horizontal center-center>
+        <!-- <div class="action-button-wrapper" hidden$="[[app.isPhoneSize]]" layout horizontal center-center>
           <a href="https://devfestizmir.eventbrite.com?aff=website" target="_blank" rel="noopener noreferrer" on-tap="_trackBuyClick">
             <paper-button class="action-button">{$ buyTicket $}</paper-button>
           </a>
-        </div>
+        </div> -->
         
       </div>
     </app-toolbar>
